# AutoHubble

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
autoscraper/: autoscraper.py  config.py  example.py  main.py  models.py
autoscraper/agents/: __init__.py  debugger.py  generator.py  navigator.py
autoscraper/base_project/: scrapy.cfg
autoscraper/base_project/base_spider/: items.py  settings.py
autoscraper/base_project/base_spider/spiders/: spider.py
autoscraper/prompts/templates/: debugger_context.jinja2  debugger_system.jinja2  generator_context.jinja2  generator_system.jinja2  generator_user_context.jinja2  navigator_context.jinja2  page_analysis.jinja2  website_analysis.jinja2  website_analysis_context.jinja2
autoscraper/utils/: chrome_driver.py  file_manager.py  html_parser.py  openrouter.py  spider_runner.py
